kubernetes-yamls/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-cats-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-cats-backend
  template:
    metadata:
      labels:
        app: awesome-cats-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/intrepid-nova-426815-g6/awesome-cats-backend:v2 #your docker image
          ports:
            - containerPort: 3000
