kubernetes-yamls/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awesome-cats-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awesome-cats-frontend
  template:
    metadata:
      labels:
        app: awesome-cats-frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/intrepid-nova-426815-g6/awesome-cats-frontend:v2 #your docker image
          ports:
            - containerPort: 80
